syntax = "proto3";

package echo;

option go_package = "../pb_echo";



service EchoService {
    rpc Echo (MessageRequest) returns (MessageReply) {}
}
message MessageRequest {
    string message = 1;
}

message MessageReply {
    string message = 1;
}